; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/common/linux/extr_khrn_client_rpc_linux.c_check_workspace.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/common/linux/extr_khrn_client_rpc_linux.c_check_workspace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KHDISPATCH_WORKSPACE_SIZE = common dso_local global i64 0, align 8
@workspace = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"rpc_workspace\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @check_workspace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_workspace(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @KHDISPATCH_WORKSPACE_SIZE, align 8
  %5 = icmp sle i64 %3, %4
  %6 = zext i1 %5 to i32
  %7 = call i32 @vcos_assert(i32 %6)
  %8 = load i32, i32* @workspace, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %15, label %10

10:                                               ; preds = %1
  %11 = load i64, i64* @KHDISPATCH_WORKSPACE_SIZE, align 8
  %12 = call i32 @khrn_platform_malloc(i64 %11, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  store i32 %12, i32* @workspace, align 4
  %13 = load i32, i32* @workspace, align 4
  %14 = call i32 @vcos_assert(i32 %13)
  br label %15

15:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @vcos_assert(i32) #1

declare dso_local i32 @khrn_platform_malloc(i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
